- [#1] Added possibility to configure which language to use to extract data from Railtimes - Added JPA criteria meta-model to domain-layer - Handle translation via dynamic query in repositories (usage of JPA criteria)